# GLLM

./: .gitignore  README-SL.md  README.md  chatbot.py  generate.py  pipelines.py  pyproject.toml  question_generation.py  rag.py  readme.md  requirements.txt  test.py  train_pipeline.py
.streamlit/: secrets.toml.example
data/txt/: Mach4-G-and-M-Code-Reference-Manual.txt  Siemens 840D Programming Manual Milling ENG.txt
finetuned_model/: README.md  adapter_config.json
finetuned_model/checkpoint-1000/: rng_state.pth  scheduler.pt  trainer_state.json
finetuned_model/checkpoint-1500/: rng_state.pth  scheduler.pt  trainer_state.json
finetuned_model/checkpoint-2000/: rng_state.pth  scheduler.pt  trainer_state.json
finetuned_model/checkpoint-2500/: rng_state.pth  scheduler.pt  trainer_state.json
finetuned_model/checkpoint-500/: rng_state.pth  scheduler.pt  trainer_state.json
gllm/: cli.py  code_generator.py  code_generator_streamlit.py  code_generator_streamlit_reasoning.py  code_generator_streamlit_reasoning_langchain.py  code_generator_streamlit_reasoning_langchain_langgraph-backup.py  code_generator_streamlit_reasoning_langchain_langgraph.py
gllm/utils/: gcode_utils.py  graph_utils.py  model_utils.py  params_extraction_utils.py  plot_path.py  plot_utils.py  prompts_utils.py  rag_utils.py
helpers/: generate.py  question_generation.py  rag.py
notebooks/: finetuned_starcoder.ipynb  functional_correctness.ipynb  gcode_validation.ipynb  generate.ipynb  output.txt  postprocessing.ipynb  star_dataset.ipynb
txt/: Siemens Programmierhandbuch NC DE.txt
