[tool.poetry]
name = "gllm"
version = "0.1.0"
description = "Source code of G-Code generation using fine-tuned/RAG-enhanced (template-based) open-source LLM models"
authors = ["Mohamed Abdelaal"]
license = "CCBy"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
transformers = "4.38.1"
streamlit = "1.31.1"
huggingface-hub = {extras = ["cli"], version = "^0.23.0"}
openai = "^1.30.1"
"pdfminer.six" = "^20231228"
datasets = "^2.19.1"
pypdf = "^4.2.0"
unstructured = "^0.13.7"
faiss-cpu = "^1.8.0"
sentence-transformers = "^2.7.0"
peft = "^0.11.0"
nltk = "^3.8.1"
evaluate = "^0.4.2"
torch = {version = "^2.3.0+cu118", source = "pytorch"}
manifest-ml = "~0.1.9"
toml = "^0.10.2"
pypdf2 = "^3.0.1"
langchain-openai = "^0.1.7"
langchainhub = "^0.1.15"
matplotlib = "^3.9.0"
pygcode = "^0.2.1"
langchain = "^0.2.1"
langgraph = "^0.0.62"
langchain-community = "^0.2.1"
smart-open = {extras = ["s3"], version = "^7.0.4"}
shapely = "^2.0.4"
plotly = "^5.22.0"
setuptools = "^80.9.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
